Graph editor, mirror over first selected marker. #39850

Closed
opened 2014-04-23 02:18:07 +02:00 by koil · 6 comments

System Information
Windows 7 32 bit.
AMD Radeon HD 7310M.

Blender Version
Broken: Blender 2.70a, win 32, f93bc76.

Short description of error
Mirror By Times over First Selected Marker doesnt work as expected.

Exact steps for others to reproduce the error

  • Add some keyframes to a property.
  • In the graph editor, add marker.
  • Select all keyframes, then select marker Shift+RMB.
  • mirror_marker.blend
  • Press Shift+M Mirror By Times over First Selected Marker.

I would of though it would of mirrored the keyframes over the marker, but it mirrored them over frame 0.

**System Information** Windows 7 32 bit. AMD Radeon HD 7310M. **Blender Version** Broken: Blender 2.70a, win 32, f93bc76. **Short description of error** Mirror By Times over First Selected Marker doesnt work as expected. **Exact steps for others to reproduce the error** * Add some keyframes to a property. * In the graph editor, add marker. * Select all keyframes, then select marker Shift+RMB. * [mirror_marker.blend](https://archive.blender.org/developer/F85690/mirror_marker.blend) * Press Shift+M Mirror By Times over First Selected Marker. I would of though it would of mirrored the keyframes over the marker, but it mirrored them over frame 0.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @koilz

Added subscriber: @koilz

This issue was referenced by blender/blender-addons-contrib@3f0227eb85

This issue was referenced by blender/blender-addons-contrib@3f0227eb85b8e3133380da4a5e32626f9147f232

This issue was referenced by 3f0227eb85

This issue was referenced by 3f0227eb85b8e3133380da4a5e32626f9147f232
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 3f0227eb85.

Closed by commit 3f0227eb85.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39850
No description provided.