Fix T39850: Graph Editor - 'Mirror Over First Selected Marker' mirrors over frame 0 instead

Problem was introduced back in 2.70 during Project Pampa when the FCurve Normalisation
feature was introduced. The cause was that the normalised cursor value was always getting
passed to the KeyframeEditData context, even when it wasn't needed.